--- a/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-funding-landing.hbs
@@ -10,7 +10,7 @@
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
-                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
+                {{#compare supplimentaryResponses.recently_updated_funds.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
                     <h3 class="blogs">Recently updated funds</h3>
                     <div class="mdc-layout-grid">
