--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -178,6 +178,7 @@ primary-dark: #251032
     $themeDigital: map-get($colours, 'digital');
     $themeJobs: map-get($colours, 'jobs');
     $themeGathering: map-get($colours, 'gathering');
+    $themeFunding: map-get($colours, 'funding');
 
     a,
     #share-menu-button,
@@ -282,7 +283,7 @@ primary-dark: #251032
         background-color: map-get($themeSelected, 'primary') !important;
     }
     .support.funding .mdc-card__primary {
-        background-color: #006054 !important;
+        background-color: map-get($themeFunding, 'primary') !important;
     }
     .support.support-policy .mdc-card__primary {
         background-color: map-get($themePosts, 'primary') !important;
