--- a/functions/test-db/json2/scvo/templates/events/event.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event.hbs
@@ -21,20 +21,20 @@
         </div>
         {{/with ~}}
 
+        {{#compare supplimentaryResponses.related_events.hits.total ">" 0 ~}}
+        <h2 class="author">Similar events</h2>
         <div class="mdc-layout-grid related">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                    {{#compare supplimentaryResponses.related_events.hits.total ">" 0 ~}}
-                    <h2 class="author">Similar events</h2>
+                {{#each supplimentaryResponses.related_events.hits.hits ~}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <ul class="supplimentary-list">
-                        {{#each supplimentaryResponses.related_events.hits.hits ~}}
                         {{{_source.rendered.scvo_list}}}
-                        {{/each ~}}
                     </ul>
-                    {{/compare ~}}
                 </div>
+                {{/each ~}}
             </div>
         </div>
+        {{/compare ~}}
         {{/handle_404 ~}}
     </div>
 </div>
