--- a/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital-search.hbs
@@ -24,11 +24,12 @@
             <li>Events</li>
         </ul>
 
+        {{#compare primaryResponse.hits.total ">" 0}}
         <h2>Find digital events</h2>
-        <form action="/digital/events" method="GET" [searchroute]="'event_digital_search'" data-auto-search="true">
-            <div class="mdc-layout-grid">
-                <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
+                    <form action="/digital/events" method="GET" [searchroute]="'event_digital_search'" data-auto-search="true">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
                         </div>
@@ -61,33 +62,27 @@
                                 {{/each ~}}
                             </select>
                         </div>
-                        <!-- <div class="mdc-form-field">
-                            <div class="mdc-checkbox">
-                                <input type="checkbox" class="mdc-checkbox__native-control" id="events-free" name="free" {{#if params.query.free}}checked{{/if}} />
-                                <div class="mdc-checkbox__background">
-                                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
-                                        <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-                                    </svg>
-                                    <div class="mdc-checkbox__mixedmark"></div>
-                                </div>
-                            </div>
-                            <label for="events-free">Only free events</label>
-                        </div> -->
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                        {{> search_info}}
+                    </form>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content event-content">
+                    {{> search_info}}
 
-                        {{#each primaryResponse.hits.hits ~}}
-                        {{{_source.rendered.scvo_list}}}
-                        {{/each ~}}
+                    {{#each primaryResponse.hits.hits ~}}
+                    {{{_source.rendered.scvo_list}}}
+                    {{/each ~}}
 
-                        {{> pagination}}
-                    </div>
+                    {{> pagination}}
                 </div>
             </div>
-        </form>
+        </div>
+        {{else}}
+        <h2>No results</h2>
+        <p>
+            There are no upcoming events. Please check back soon.
+        </p>
+        {{/compare}}
     </div>
 </div>
