--- a/functions/test-db/json2/scvo/templates/events/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-search.hbs
@@ -23,11 +23,12 @@
             <li>Events</li>
         </ul>
 
+        {{#compare primaryResponse.hits.total ">" 0}}
         <h2>Find training courses &amp; events</h2>
-        <form action="/events" method="GET" [searchroute]="'event_search'" data-auto-search="true">
-            <div class="mdc-layout-grid">
-                <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
+                    <form action="/events" method="GET" [searchroute]="'event_search'" data-auto-search="true">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
                         </div>
@@ -75,21 +76,27 @@
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content events-content">
-                        {{> search_info}}
+                    </form>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content events-content">
+                    {{> search_info}}
 
-                        {{#each primaryResponse.hits.hits ~}}
-                        {{{_source.rendered.scvo_list}}}
-                        {{/each ~}}
+                    {{#each primaryResponse.hits.hits ~}}
+                    {{{_source.rendered.scvo_list}}}
+                    {{/each ~}}
 
-                        {{> pagination}}
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
-                        {{> sidebar_events}}
-                    </div>
+                    {{> pagination}}
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
+                    {{> sidebar_events}}
                 </div>
             </div>
-        </form>
+        </div>
+        {{else}}
+        <h2>No results</h2>
+        <p>
+            There are no upcoming events. Please check back soon.
+        </p>
+        {{/compare}}
     </div>
 </div>
