--- a/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates.hbs
@@ -8,6 +8,7 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
+                            {{log "TEST" params}}
                             Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
                         </span>
                     </h1>
