--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -188,7 +188,7 @@
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone help">
                                     <h3>Help</h3>
                                     <ul class="mdc-list">
-                                        {{#each menus.footer ~}}
+                                        {{#each context.menus.footer ~}}
                                         <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
                                         {{/each ~}}
                                     </ul>
