--- a/db/json2/scvo/templates/events/event-booking.hbs
+++ b/db/json2/scvo/templates/events/event-booking.hbs
@@ -14,7 +14,11 @@
                         {{#compare course_type "===" "Training Course" ~}}
                         <iframe src="https://www.surveygizmo.eu/s3/90055302/Events-Booking-Training-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
                         {{else}}
+                        {{#compare Id "===" "a1v0N000004Wy00QAO" ~}}
+                        <iframe src="https://www.surveygizmo.eu/s3/90071732/Event-Booking-Conference-GDPR?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+                        {{else}}
                         <iframe src="https://www.surveygizmo.eu/s3/90066146/Event-Booking-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+                        {{/compare ~}}
                         {{/compare ~}}
                     </div>
                 </div>
