--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1051,7 +1051,7 @@ section.search {
         .featured {
             h1,
             p {
-                font-size: 1.1rem;
+                // font-size: 1.1rem;
                 color: black;
             }
             h1.header-text {
@@ -1090,10 +1090,12 @@ section.search {
             background-position: center center;
             p,
             .mdc-card__supporting-text {
-                font-size: 1.4rem;
-                letter-spacing: -0.03rem;
+                // font-size: 1.4rem;
+                // letter-spacing: -0.03rem;
             }
             h1,
+            h2,
+            h3,
             p,
             a,
             .mdc-card__supporting-text {
@@ -1113,13 +1115,13 @@ section.search {
                 margin-top: $unit*3;
                 .mdc-card-inner {
                     padding: $unit;
-                    h2 {
+                    h3 {
                         color: white;
                         margin-top: 0;
                     }
                     p {
-                        line-height: 1.6rem;
-                        font-size: 1.25rem;
+                        // line-height: 1.6rem;
+                        // font-size: 1.25rem;
                     }
                 }
             }
@@ -1134,9 +1136,9 @@ section.search {
     .featured {
         .mdc-card__supporting-text {
             padding-top: $unit;
-            line-height: 1.55rem;
-            font-size: 1.25rem;
-            letter-spacing: -0.03rem;
+            // line-height: 1.55rem;
+            // font-size: 1.25rem;
+            // letter-spacing: -0.03rem;
             color: #fff !important;
         }
     }
