--- a/db/json2/scvo/templates/pages/home.hbs
+++ b/db/json2/scvo/templates/pages/home.hbs
@@ -104,7 +104,7 @@
                         </a>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <p style="padding-top: 2.5rem; line-height: 1.6rem; font-size: 1.25rem;">
+                        <p style="padding-top: 2.5rem;">
                             Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
                             <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
                         </p>
@@ -167,9 +167,9 @@
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                         <div class="mdc-card">
                             <div class="mdc-card-inner">
-                                <h2>
+                                <h3>
                                     The Scottish Charity Awards are back for 2018, and we want you to tell us which Scottish charities and individuals had been the best, most innovative and effective during the past year!
-                                </h2>
+                                </h3>
                                 <p>
                                     There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony on June 14th at the EICC in Edinburgh. <a href="/scottish-charity-awards">Read more</a>
                                 </p>
