--- a/db/json2/scvo/templates/pages/home.hbs
+++ b/db/json2/scvo/templates/pages/home.hbs
@@ -103,8 +103,8 @@
                             <img alt="#EUareValued" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/eu-are-valued-text.png">
                         </a>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <p style="padding-top: 2.5rem;">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone c-align">
+                        <p>
                             Here at SCVO, we love charities. We believe every person who works to make a difference to Scottish communities should be valued, and that includes our colleagues who have come from other EU countries to live and work here. Scotland’s third sector is strengthened thanks to their contribution&hellip;
                             <a href="/projects-campaigns/europe-and-the-third-sector/eu-are-valued">Read more</a>
                         </p>
@@ -164,7 +164,7 @@
                             <img alt="Scottish Charity Awards" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA_2018_LOGO_MAIN.png">
                         </a>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone c-align">
                         <div class="mdc-card">
                             <div class="mdc-card-inner">
                                 <h3>
