--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -6,7 +6,7 @@
   </div>
   {{/compare}}
   <h1 class="mdc-typography--headline3 v-margin-full">
-    Searches
+    Saved searches &amp; email
   </h1>
 
   {{#compare (length @root.data.searches.items.[0]) ">" 0 ~}}
@@ -17,12 +17,12 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-2-phone saved-search">
             <span class="mdc-list-item__text">
-              <strong>Search name</strong>
+              <strong>Search</strong>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone align-centre">
             <span class="mdc-list-item__text">
-              <strong>Include in email</strong>
+              <strong>Email</strong>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone align-centre">
