--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,4 +1,4 @@
-<div id="detailed-results-container" class="container-content goodmoves-saved-searches">
+<div id="detailed-results-container" class="container-content content-saved-searches">
   {{#compare (length @root.data.searches.items.[0]) ">" 0 ~}}
   <div class="settings mdc-typography--body1">
     <span class="settings-heading">Email frequency</span>
