--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-layout-grid home-jobs">
+<div class="mdc-layout-grid home-content-primary">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
       <div class="browse-title browse-title-roles mdc-typography--headline5">
