--- a/sites/configurations/getinvolved/partials/opportunity/key-info.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/key-info.hbs
@@ -67,13 +67,13 @@
           </li>
         {{/if}}
       {{/compare ~}}
-      {{#if end_date ~}}
+      <!-- {{#if end_date ~}}
       <li class="mdc-card__info--content-primary-closing mdc-typography--body1">
         <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="End date"></span></span>
         <strong>Closing</strong>
         {{{momentFormat (moment end_date "x") "Do MMMM YYYY"}}}
       </li>
-      {{/if ~}}
+      {{/if ~}} -->
     </ul>
   </div>
 </div>
