--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -153,7 +153,7 @@
         </span>
       </span>
       <span class="mdc-typography--body2">
-        By client group or work type
+        By client group, work type, or region
       </span>
     </h3>
     <div id="home-browse-collapse" style="display: none;">
