--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -7,7 +7,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               {{> logo welcome="true"}}
               <p class="header-extra">
-
+                Find a volunteering opportunity to suit you
               </p>
             </div>
           </div>
