--- a/sites/configurations/digitalparticipation/templates/sign-up-form-annual.hbs
+++ b/sites/configurations/digitalparticipation/templates/sign-up-form-annual.hbs
@@ -1,1 +1,1 @@
-<iframe src="http://www.surveygizmo.eu/s3/90041523/CharterReview?key={{request.params.query.id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+<iframe src="https://www.surveygizmo.eu/s3/90102537/Charter-Annual-Review?key={{request.params.query.key}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
