--- a/sites/configurations/volunteerscotland-search/templates/opportunities/map-data.hbs
+++ b/sites/configurations/volunteerscotland-search/templates/opportunities/map-data.hbs
@@ -11,4 +11,6 @@
 {{/each}}
 
 ],
-"aggregations" : {{{safeStringify @root.data.search_data.map_results.aggregations}}} }
+"aggregations" : {{{safeStringify @root.data.search_data.map_results.aggregations}}}
+
+}
